--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "scss-compile": "node-sass src/sass/app.scss -o ./assets/css"
+    "scss-compile": "node-sass src/sass/app.scss -o ./assets/css",
+    "optimize-media": "imagemin --out-dir=./assets/img src/img/**/*.{png,jpg,gif}"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
@@ -28,9 +29,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@expo/webpack-config": "^0.12.0",
     "babel-preset-expo": "^6.0.0",
+    "file-loader": "^6.0.0",
     "google-fonts-offline": "^0.1.5",
-    "node-sass": "^4.13.0"
+    "imagemin-cli": "^5.0.0",
+    "node-sass": "^4.13.0",
+    "url-loader": "^4.1.0"
   },
   "private": true
 }
