--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.0.0",
     "react-bootstrap-icons": "^1.0.1-alpha3",
     "react-dom": "~16.9.0",
+    "react-icons": "^3.10.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.7.1",
@@ -36,6 +37,7 @@
     "google-fonts-offline": "^0.1.5",
     "imagemin-cli": "^5.0.0",
     "node-sass": "^4.13.0",
+    "react-dev-tools": "0.0.1",
     "url-loader": "^4.1.0"
   },
   "private": true
