--- a/package.json
+++ b/package.json
@@ -11,23 +11,32 @@
     "optimize-media": "imagemin --out-dir=./assets/img src/img/**/*.{png,jpg,gif}"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.1.0",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
     "bootstrap": "^4.4.1",
     "expo": "~37.0.3",
-    "jquery": "^2.2.4",
+    "expo-font": "~8.1.0",
+    "grommet": "^2.13.0",
+    "grommet-icons": "^4.4.0",
+    "native-base": "2.13.8",
+    "navbar-native": "^1.6.1",
     "react": "~16.9.0",
-    "react-bootstrap": "^1.0.0",
-    "react-bootstrap-icons": "^1.0.1-alpha3",
     "react-dom": "~16.9.0",
     "react-icons": "^3.10.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-drawer": "^2.5.1",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-navbar": "^2.1.0",
+    "react-native-navbar-icon": "^1.0.1",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
@@ -37,8 +46,7 @@
     "google-fonts-offline": "^0.1.5",
     "imagemin-cli": "^5.0.0",
     "node-sass": "^4.13.0",
-    "react-dev-tools": "0.0.1",
-    "url-loader": "^4.1.0"
+    "react-dev-tools": "0.0.1"
   },
   "private": true
 }
