--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.1.0",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
     "bootstrap": "^4.4.1",
@@ -28,12 +29,15 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-drawer": "^2.5.1",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-navbar": "^2.1.0",
     "react-native-navbar-icon": "^1.0.1",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-side-drawer": "^1.2.6",
+    "react-native-side-menu": "^1.1.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.0"
