--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.4.1",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
+    "formik": "^2.1.4",
     "grommet": "^2.13.0",
     "grommet-icons": "^4.4.0",
     "native-base": "2.13.8",
@@ -39,6 +40,7 @@
     "react-native-screens": "^2.2.0",
     "react-native-side-drawer": "^1.2.6",
     "react-native-side-menu": "^1.1.3",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.0"
