--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-side-drawer": "^1.2.6",
     "react-native-side-menu": "^1.1.3",
     "react-native-table-component": "^1.2.1",
+    "react-native-toast-native": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.0"
