--- a/package.json
+++ b/package.json
@@ -14,18 +14,17 @@
   "dependencies": {
     "@expo/vector-icons": "^10.1.0",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/picker": "^1.6.0",
     "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
-    "bootstrap": "^4.4.1",
+    "eslint": "^3.14.1",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
-    "formik": "^2.1.4",
-    "grommet": "^2.13.0",
-    "grommet-icons": "^4.4.0",
     "native-base": "2.13.8",
     "navbar-native": "^1.6.1",
-    "react": "~16.9.0",
+    "paypal-rest-sdk": "^1.8.1",
+    "react": "16.11.0",
     "react-dom": "~16.9.0",
     "react-icons": "^3.10.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -34,7 +33,6 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-modal": "^11.5.6",
     "react-native-navbar": "^2.1.0",
     "react-native-navbar-icon": "^1.0.1",
     "react-native-reanimated": "^1.7.1",
@@ -46,6 +44,7 @@
     "react-native-toast-native": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^9.4.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
@@ -56,7 +55,10 @@
     "google-fonts-offline": "^0.1.5",
     "imagemin-cli": "^5.0.0",
     "node-sass": "^4.13.0",
-    "react-dev-tools": "0.0.1"
+    "react-dev-tools": "0.0.1",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.9.2"
   },
   "private": true
 }
