--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-navbar": "^2.1.0",
     "react-native-navbar-icon": "^1.0.1",
+    "react-native-notifications": "^3.2.2",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
