--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
     },
     "android": {
       "package": "com.bluechipadvertising.houndsdrivein",
-      "versionCode": 2
+      "versionCode": 2,
     }
     }
   }
