--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "expo": "~37.0.3",
     "expo-av": "~8.1.0",
     "expo-font": "~8.1.0",
+    "expo-notifications": "~0.1.1",
     "expo-optimize": "^0.1.32",
+    "expo-permissions": "~8.1.0",
     "expo-print": "~8.1.0",
     "native-base": "2.13.8",
     "navbar-native": "^1.6.1",
