--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/checkbox": "^0.5.5",
     "@react-native-community/picker": "1.6.6",
     "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/native": "^5.1.6",
