--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
-    "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/checkbox": "^0.5.5",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.6",
     "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/native": "^5.1.6",
@@ -35,6 +35,7 @@
     "react-icons": "^3.10.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-custom-picker": "^0.4.0",
     "react-native-drawer": "^2.5.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^2.0.0",
